--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@supabase/supabase-js": "^2.39.0",
     "@mui/material": "^5.14.18",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.344.0",
