--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@supabase/supabase-js": "^2.39.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
     "@mui/material": "^5.14.18",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.344.0",
