--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-iframe": "^1.8.5",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
