🔧🔍 Remove Auto-Update SEO/Sitemap + Enhanced Search Prioritization
🔧 REMOVED AUTO-UPDATE FUNCTIONALITY:
- Removed automatic sitemap generation from build process
- Deleted auto-update scripts (generate-sitemap.js, simple-sitemap.js, cron-update-sitemap.sh)
- Cleaned up package.json build scripts
- Eliminated automated SEO file updates

🔍 ENHANCED SEARCH PRIORITIZATION:
- Implemented intelligent search relevance scoring
- Search results now prioritize most relevant content first
- Advanced ranking algorithm for better content discovery

🎯 SEARCH RELEVANCE ALGORITHM:
✅ Exact Title Match: 100 points (highest priority)
✅ Title Starts With Search: 80 points
✅ Title Contains Search: 60 points
✅ Exact Category Match: 50 points
✅ Category Contains Search: 30 points
✅ Description Contains Search: 20 points
✅ Exact Word Matches: +15 points each

🔍 SEARCH RESULT ORGANIZATION:
✅ Search Results Category:
- When searching, all results shown in single 'Search Results' category
- Maintains relevance order from search algorithm
- Prevents category fragmentation during search
- Ensures most relevant content appears first

✅ Normal Category View:
- When not searching, maintains original category structure
- Alphabetical sorting within categories
- Preserves browsing experience

🎯 SEARCH IMPROVEMENTS:
- Multi-field search across title, description, category
- Case-insensitive matching
- Partial word matching
- Exact word boundary detection
- Relevance-based result ordering
- Smart search result grouping

🔧 TECHNICAL CHANGES:
- Removed sitemap auto-generation from build process
- Cleaned up package.json scripts
- Deleted automated SEO update scripts
- Enhanced search filtering logic
- Improved relevance scoring algorithm
- Optimized search result presentation

🌟 USER EXPERIENCE BENEFITS:
- Most relevant search results appear first
- Better content discovery through intelligent ranking
- Cleaner search result presentation
- Faster, more accurate search results
- Improved search relevance

--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node scripts/simple-sitemap.js && vite build",
+    "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "generate-sitemap": "node scripts/generate-sitemap.js",
     "clean": "node scripts/clean-dependencies.js",
     "fresh-install": "npm run clean && npm install"
   },
