--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,5 +20,9 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src"]
+  "include": ["src"],
+  "typeRoots": [
+    "./node_modules/@types",
+    "./src/types"
+  ]
 }
