--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
-    "@react-pdf-viewer/core": "^3.12.0",
-    "@react-pdf-viewer/default-layout": "^3.12.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-iframe": "^1.8.5",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "dearflip-js-flipbook": "^1.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
