--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-iframe": "^1.8.5",
-    "react-router-dom": "^6.18.0",
-    "dearflip-js-flipbook": "^1.0.0"
+    "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
