Integrate RapidAPI for TikTok scraping functionality. Update TikTokScraper class to utilize RapidAPI for video searches, including API key management and enhanced error handling. Optimize search terms and implement API usage tracking in the main execution function. Update GitHub Actions workflow to include RAPIDAPI_KEY environment variable.

--- a/.github/workflows/tiktok-scraper.yml
+++ b/.github/workflows/tiktok-scraper.yml
@@ -27,6 +27,8 @@ jobs:
         pip install requests beautifulsoup4 lxml
     
     - name: Run TikTok scraper
+      env:
+        RAPIDAPI_KEY: ${{ secrets.RAPIDAPI_KEY }}
       run: |
         python scripts/tiktok_scraper.py
     
