--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@mui/material": "^5.14.18",
     "currency-symbol-map": "^5.1.0",
     "framer-motion": "^10.16.4",
-    "lightbox2": "^2.11.5",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-iframe": "^1.8.5",
+    "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
