--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-helmet-async": "^2.0.5",
     "react-iframe": "^1.8.5",
     "react-modal-image": "^2.6.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "yet-another-react-lightbox": "^3.23.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
