--- a/netlify.toml
+++ b/netlify.toml
@@ -2,11 +2,38 @@
   publish = "dist"
   command = "npm run build"
 
+# SPA redirect - MUST be first to handle all routes
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
 # Redirect rules for SEO
 [[redirects]]
   from = "/robots"
   to = "/robots.txt"
   status = 301
+
+# MIME type headers for assets - CRITICAL for fixing MIME type errors
+[[headers]]
+  for = "*.css"
+  [headers.values]
+    Content-Type = "text/css; charset=utf-8"
+
+[[headers]]
+  for = "*.js"
+  [headers.values]
+    Content-Type = "application/javascript; charset=utf-8"
+
+[[headers]]
+  for = "*.mjs"
+  [headers.values]
+    Content-Type = "application/javascript; charset=utf-8"
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
 
 # Headers for better SEO and security
 [[headers]]
