--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,10 @@
 [build]
   publish = "dist"
-  command = "npm run build"
+  command = "npm run build:clean"
+
+[build.environment]
+  NODE_VERSION = "18"
+  NPM_VERSION = "8"
 
 # SPA redirect - MUST be first to handle all routes
 [[redirects]]
@@ -34,6 +38,17 @@
   for = "/assets/*"
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
+
+# Prevent caching of HTML files to ensure fresh content
+[[headers]]
+  for = "/index.html"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
+
+[[headers]]
+  for = "/*.html"
+  [headers.values]
+    Cache-Control = "public, max-age=0, must-revalidate"
 
 # Headers for better SEO and security
 [[headers]]
