--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:clean": "vite build --force",
     "lint": "eslint .",
     "preview": "vite preview",
     "clean": "node scripts/clean-dependencies.js",
