--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "build:clean": "vite build --force",
+    "build:clean": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "clean": "node scripts/clean-dependencies.js",
