Update SEO metadata: site name to 'Best School in Ghana - SLDJHS' and page title to 'ST. LOUIS DEMONSTRATION J.H.S - Leading Education'

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "St. Louis Demo. J.H.S",
-  "short_name": "St. Louis Demo. J.H.S",
+  "name": "Best School in Ghana - SLDJHS",
+  "short_name": "Best School in Ghana - SLDJHS",
   "description": "St. Louis Demonstration JHS - Excellence in Education. Premier educational institution in Ghana offering quality junior high school education.",
   "start_url": "/",
   "display": "standalone",
