--- a/public/manifest.json
+++ b/public/manifest.json
@@ -18,13 +18,13 @@
       "purpose": "any maskable"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/android-icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/apple-icon-180x180.png",
       "sizes": "180x180",
       "type": "image/png",
       "purpose": "any"
@@ -66,7 +66,7 @@
       "purpose": "any"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/favicon-32x32.png",
       "sizes": "32x32",
       "type": "image/png",
       "purpose": "favicon"
