Fix Google Search display issues: update site name to 'St. Louis Demo. JHS - Suame, Mbrom' instead of domain, add organization meta tags and structured data for proper logo recognition in search results

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Best School in Ghana - SLDJHS",
-  "short_name": "Best School in Ghana - SLDJHS",
+  "name": "St. Louis Demo. JHS - Suame, Mbrom",
+  "short_name": "St. Louis Demo JHS",
   "description": "St. Louis Demonstration JHS - Excellence in Education. Premier educational institution in Ghana offering quality junior high school education.",
   "start_url": "/",
   "display": "standalone",
