--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "clean": "node scripts/clean-dependencies.js",
-    "fresh-install": "npm run clean && npm install"
+    "fresh-install": "npm run clean && npm install",
+    "update-robots": "node scripts/update-robots-date.js",
+    "update-sitemaps": "node scripts/update-sitemaps-date.js",
+    "update-dates": "node scripts/update-all-dates.js",
+    "prebuild": "npm run update-dates"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
