🔄 ADDED: Automatic Sync for Local Development
✅ Smart Sync Implementation:
- Modified 'npm run dev' to automatically sync before starting
- Added smart sync script that checks for remote updates
- Handles uncommitted local changes with auto-stash
- Only pulls if there are actual remote updates
- Perfect for syncing auto-updated SEO files

🎯 Commands:
- 'npm run dev' - Auto-sync + start development
- 'npm run dev:nosync' - Start without sync
- 'npm run sync' - Manual smart sync anytime

Now your local environment automatically stays in sync!

--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "npm run sync && vite",
+    "dev:nosync": "vite",
+    "sync": "node scripts/smart-sync.js",
+    "sync:simple": "git pull origin main",
     "build": "vite build",
     "build:clean": "vite build",
     "lint": "eslint .",
