Enhance local SEO auto-sync: smart-sync now automatically updates and commits SEO files locally when needed

--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "update-robots": "node scripts/update-robots-date.js",
     "update-sitemaps": "node scripts/update-sitemaps-date.js",
     "update-dates": "node scripts/update-all-dates.js",
-    "prebuild": "npm run update-dates"
+    "update-seo": "npm run update-dates && git add public/robots.txt public/sitemap*.xml && git status",
+    "prebuild": "npm run update-dates",
+    "postinstall": "npm run sync"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
