Change SEO auto-update schedule from daily to monthly - runs on 1st day of each month (12 times per year)

--- a/.github/workflows/update-robots-date.yml
+++ b/.github/workflows/update-robots-date.yml
@@ -1,9 +1,9 @@
 name: Update SEO Files Dates
 
 on:
-  # Run daily at 00:01 UTC (keeps all SEO files fresh)
+  # Run monthly on the 1st day at 00:01 UTC (keeps all SEO files fresh)
   schedule:
-    - cron: '1 0 * * *'
+    - cron: '1 0 1 * *'
 
   # Allow manual trigger
   workflow_dispatch:
