--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,13 +12,13 @@
   "categories": ["education", "school", "learning"],
   "icons": [
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/applogo.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/android-icon-192x192.png",
+      "src": "/applogo.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "any maskable"
@@ -30,37 +30,37 @@
       "purpose": "any"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/applogo.png",
       "sizes": "152x152",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/applogo.png",
       "sizes": "144x144",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/applogo.png",
       "sizes": "120x120",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/applogo.png",
       "sizes": "96x96",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/applogo.png",
       "sizes": "72x72",
       "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/applogo.png",
       "sizes": "48x48",
       "type": "image/png",
       "purpose": "any"
@@ -72,7 +72,7 @@
       "purpose": "favicon"
     },
     {
-      "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+      "src": "/applogo.png",
       "sizes": "16x16",
       "type": "image/png",
       "purpose": "favicon"
@@ -102,7 +102,7 @@
       "url": "/apply-now",
       "icons": [
         {
-          "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+          "src": "/applogo.png",
           "sizes": "96x96",
           "type": "image/png"
         }
@@ -115,7 +115,7 @@
       "url": "/news",
       "icons": [
         {
-          "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+          "src": "/applogo.png",
           "sizes": "96x96",
           "type": "image/png"
         }
@@ -128,7 +128,7 @@
       "url": "/gallery",
       "icons": [
         {
-          "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+          "src": "/applogo.png",
           "sizes": "96x96",
           "type": "image/png"
         }
@@ -141,7 +141,7 @@
       "url": "/contact",
       "icons": [
         {
-          "src": "https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1M6q6dmU5zPYJTensbIFy9BQvGZ6hHUoNLkwlO",
+          "src": "/applogo.png",
           "sizes": "96x96",
           "type": "image/png"
         }
