Implement proper PWA installation with progress tracking - Added visible download progress bar, installation states, completion notification with Open button, improved app visibility in app drawer, and enhanced service worker communication

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,12 +4,13 @@
   "description": "St. Louis Demonstration JHS - Excellence in Education. Premier educational institution in Ghana offering quality junior high school education.",
   "start_url": "/",
   "display": "standalone",
+  "display_override": ["window-controls-overlay", "standalone", "minimal-ui"],
   "background_color": "#000000",
   "theme_color": "#1e40af",
   "orientation": "portrait-primary",
   "scope": "/",
   "lang": "en",
-  "categories": ["education", "school", "learning"],
+  "categories": ["education", "school", "learning", "productivity", "reference"],
   "icons": [
     {
       "src": "/applogo.png",
