--- a/package.json
+++ b/package.json
@@ -30,8 +30,12 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-iframe": "^1.8.5",
+    "react-markdown": "^10.1.0",
     "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.18.0",
+    "rehype-katex": "^7.0.1",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "yet-another-react-lightbox": "^3.23.2"
   },
   "devDependencies": {
