--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "axios": "^1.13.0",
     "currency-symbol-map": "^5.1.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.548.0",
