Fix ImageKit 403 error with serverless function solution
- Created serverless function at api/imagekit-files.js to handle ImageKit API calls securely
- Added IMAGEKIT_PRIVATE_KEY environment variable for server-side authentication
- Updated vercel.json to properly route API requests and configure function timeout
- Modified GalleryPage to use /api/imagekit-files endpoint instead of direct API calls
- Fixed 403 authentication error by using private key server-side instead of public key client-side
- Added proper error handling and CORS headers for API endpoint
- Serverless function handles ImageKit /v1/files API with proper authentication
- Ready for deployment with secure server-side ImageKit integration

--- a/vercel.json
+++ b/vercel.json
@@ -14,8 +14,17 @@
   ],
   "rewrites": [
     {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
       "source": "/(.*)",
       "destination": "/index.html"
     }
-  ]
+  ],
+  "functions": {
+    "api/imagekit-files.js": {
+      "maxDuration": 10
+    }
+  }
 }
