--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
     "axios": "^1.13.0",
+    "cors": "^2.8.5",
     "currency-symbol-map": "^5.1.0",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.548.0",
     "react": "^18.3.1",
